// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginForm when active renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      keyboardType="email-address"
      onChangeText={[Function]}
      placeholder="Email"
      rejectResponderTermination={true}
      style={
        Object {
          "backgroundColor": "rgb(255, 255, 255)",
          "borderRadius": 5,
          "flex": 2,
          "height": 40,
          "padding": 10,
        }
      }
      textContentType="emailAddress"
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      onChangeText={[Function]}
      placeholder="Senha"
      rejectResponderTermination={true}
      secureTextEntry={true}
      style={
        Object {
          "backgroundColor": "rgb(255, 255, 255)",
          "borderRadius": 5,
          "flex": 2,
          "height": 40,
          "padding": 10,
        }
      }
      textContentType="password"
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <TouchableOpacity
      activeOpacity={0.2}
      onPress={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(4, 71, 47, 0.75)",
          "borderRadius": 100,
          "paddingHorizontal": 20,
          "paddingVertical": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "rgb(255, 255, 255)",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        Entrar
      </Text>
    </TouchableOpacity>
  </View>
</View>
`;

exports[`LoginForm when loading renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      keyboardType="email-address"
      onChangeText={[Function]}
      placeholder="Email"
      rejectResponderTermination={true}
      style={
        Object {
          "backgroundColor": "rgb(255, 255, 255)",
          "borderRadius": 5,
          "flex": 2,
          "height": 40,
          "padding": 10,
        }
      }
      textContentType="emailAddress"
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      onChangeText={[Function]}
      placeholder="Senha"
      rejectResponderTermination={true}
      secureTextEntry={true}
      style={
        Object {
          "backgroundColor": "rgb(255, 255, 255)",
          "borderRadius": 5,
          "flex": 2,
          "height": 40,
          "padding": 10,
        }
      }
      textContentType="password"
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "margin": 10,
      }
    }
  >
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      onPress={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(51,51,51,0.25)",
          "borderRadius": 100,
          "paddingHorizontal": 20,
          "paddingVertical": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "rgb(255, 255, 255)",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        Entrar
      </Text>
    </TouchableOpacity>
  </View>
</View>
`;
